--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-zoom": "^2.0.1",
     "date-fns": "^4.1.0",
+    "lightweight-charts": "^4.2.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
