--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,18 @@
     "chart.js": "^4.4.6",
     "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-zoom": "^2.0.1",
+    "d3-format": "^3.1.0",
+    "d3-scale": "^4.0.2",
+    "d3-time-format": "^4.1.0",
     "date-fns": "^4.1.0",
     "lightweight-charts": "^4.2.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-financial-charts": "^2.0.1",
     "react-scripts": "5.0.1",
     "react-use-websocket": "^4.10.0",
+    "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
