--- a/new-frontend/package.json
+++ b/new-frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "new-frontend",
   "private": true,
+  "proxy": "http://localhost:8000",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -11,11 +12,14 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "lightweight-charts": "^4.2.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-use-websocket": "^4.11.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
