--- a/new-frontend/tsconfig.json
+++ b/new-frontend/tsconfig.json
@@ -14,8 +14,8 @@
       "resolveJsonModule": true,
       "isolatedModules": true,
       "noEmit": true,
-      "jsx": "react-jsx"
+      "jsx": "react-jsx",
+      "types": ["node"],
     },
-    "include": ["src"],src/components/OrderHistory.tsx
     "exclude": ["node_modules"]
   }
