--- a/new-frontend/package.json
+++ b/new-frontend/package.json
@@ -11,11 +11,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "axios": "^1.7.7",
     "lightweight-charts": "^4.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-use-websocket": "^4.11.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0",
+    "react-use-websocket": "^4.11.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
